--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="create/">Write Blog</a>
+                  <a class="nav-link" href="create/">Write A Blog</a>
                 </li>
+                 
                 <li class="nav-item">
-                  <a class="nav-link" href="/">My Blogs</a>
+                  <a class="nav-link" href="/logout">Log Out</a>
                 </li>
               </ul>
             </div>
